slightly squared nodes to avoid text cut off

--- a/public/css/graph.css
+++ b/public/css/graph.css
@@ -35,7 +35,7 @@ html, body {
     position: absolute;
     color: #fff;
     background-color: #111;
-    border-radius: 50%;
+    border-radius: 10%;
     overflow: hidden;
     transition: border-radius 0.1s;
 }
